# varnish-software-technical-coding-evaluation

./: .gitmodules  README.md
hiring/: configure.ac
hiring/src/: Makefile.am  vmod_hiring.c  vmod_hiring.vcc
hiring/src/vtc/: vmod_hiring.vtc
playground/: configure.ac
playground/src/: Makefile.am  vmod_playground.c  vmod_playground.vcc
playground/src/vtc/: vmod_playground.vtc
vcdkmod/: configure.ac
vcdkmod/src/: Makefile.am  vmod_vcdkmod.c  vmod_vcdkmod.vcc
vcdkmod/src/vtc/: vmod_vcdkmod.vtc
